fixed flickering when hovering both over country and a statistics dialog; improved number formatting

--- a/src/components/Legend/style.module.css
+++ b/src/components/Legend/style.module.css
@@ -22,6 +22,10 @@
     box-shadow: 0px 0px 7px 1px rgba(46, 46, 46, 0.75);
 }
 
+.legend-inner:hover{
+    cursor: default;
+}
+
 .bottom-right .legend-inner{
     margin-right: 30px;
     margin-bottom: 30px;
@@ -70,6 +74,10 @@ h2{
     margin: 5px 0;
     padding: 5px 0;
     border: solid 1px black;
+}
+
+.button-inner:hover{
+    cursor: pointer;
 }
 
 .button .active{
